# Bible-App

./: Cargo.toml  README.md  intro.txt
new_testament/: Acts.txt  Colossians.txt  Ephesians.txt  First Corinthians.txt  First John.txt  First Peter.txt  First Thessalonians.txt  First Timothy.txt  Galatians.txt  Hebrews.txt  James.txt  John.txt  Jude.txt  Luke.txt  Mark.txt  Matthew.txt  Philemon.txt  Philippians.txt  Revelation.txt  Romans.txt  Second Corinthians.txt  Second John.txt  Second Peter.txt  Second Thessalonians.txt  Second Timothy.txt  Third John.txt  Titus.txt
old_testament/: Amos.txt  Daniel.txt  Deuteronomy.txt  Ecclesiastes.txt  Esther.txt  Exodus.txt  Ezekiel.txt  Ezra.txt  First Chronicles.txt  First Kings.txt  First Samuel.txt  Genesis.txt  Habakkuk.txt  Haggai.txt  Hosea.txt  Isaiah.txt  Jeremiah.txt  Job.txt  Joel.txt  Jonah.txt  Joshua.txt  Judges.txt  Lamentations.txt  Leviticus.txt  Malachi.txt  Micah.txt  Nahum.txt  Nehemiah.txt  Numbers.txt  Obadiah.txt  Proverbs.txt  Psalms.txt  Ruth.txt  Second Chronicles.txt  Second Kings.txt  Second Samuel.txt  Song of Solomon.txt  Zechariah.txt  Zephaniah.txt
src/: main.rs
